--- a/views/borrow_view.xml
+++ b/views/borrow_view.xml
@@ -6,9 +6,12 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="customer_name" />
+                <field name="customer_cmt" />
                 <field name="borrow_day" />
                 <field name="expiredate" />
+                <field name="give_back_day" />
                 <field name="total_price" />
+                <field name="currency_id" />
             </tree>
         </field>
     </record>
@@ -24,16 +27,22 @@
                             <h1>
                                 <field name="id_customer" />
                             </h1>
+                            <field name="customer_cmt" />
                             <field name="borrow_day" />
                             <field name="give_back_day" />
                             <field name="expiredate" />
                             <field name="total_price" />
+                            <field name="currency_id" />
+                            <field name="is_give_back" />
+                            <button string="Trả sách" name="give_back_btn" type="object" class="oe_highlight"/>
                         </group>
                         
-                        <field name="id_books" widget="one2many_list">
+                        <field name="book_ids" >
                             <tree editable='bottom'>
                                 <field name="name" />
+                                <!-- <field name="rented" /> -->
                                 <field name="rent_price" />
+                                <field name="currency_id" />
                             </tree>
                         </field>
                         
