--- a/views/customer_view.xml
+++ b/views/customer_view.xml
@@ -29,14 +29,24 @@
                             <field name="birthday" />
                             <field name="cmt" />
                             <field name="address" />  
-                        
+                            <field name="number_rented" />
+                            <field name="number_return_before_expiredate" />
                         </group>
 
                         <group>
                             <field name="image" widget="image"/>
                         </group>
                     </group>
-                    <!-- <field name="borrow_ids" /> -->
+                    <field name="borrow_ids">
+                        <tree editable='bottom'>
+                            <field name="borrow_day" />
+                            <field name="expiredate" />
+                            <field name="give_back_day" />
+                            <field name="total_price" />
+                            <field name="currency_id" />
+                        </tree>
+                    </field>
+
                 </sheet>
             </form>
         </field>
